--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
 
     <!-- Main strings across the app -->
-
     <string name="app_name">Infection Prevention</string>
 
     <string name="hospital_name">Keck Medicine</string>
@@ -9,6 +8,10 @@
     <string name="my_message">You clicked the settings button</string>
     <string name="alert_dialog_ok">OK</string>
     <string name="alert_dialog_cancel">Cancel</string>
+
+    <!-- Shortcuts -->
+    <string name="create_new_report_shortcut_short_label">Create New Report</string>
+    <string name="create_new_report_shortcut_longs_label">Create New Observation Report</string>
 
     <!-- Main Activity -->
     <string name="main_alert_dialog_title">Connection Issue!</string>
@@ -105,6 +108,4 @@
     <string name="reset_filter_menu_label">Reset Filters</string>
     <string name="remove_filter_button">Remove Filter Button</string>
     <string name="default_filter_name">Filter Name</string>
-
-
 </resources>
