Update action bar to improve accessibility, look and feel of searchbar in reportList

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
 
     <!-- Main strings across the app -->
     <string name="app_name">Infection Prevention</string>
+    <string name="company_logo">Action Bar Company Logo</string>
 
     <string name="hospital_name">Keck Medicine</string>
 
