--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,7 +47,7 @@
     
     <!-- General User Settings Activities w/ Keys -->
     <string name="settings_personal_info">Personal Info</string>
-    <string name="settings_personal_key">user</string>
+    <string name="settings_personal_key">user_category</string>
 
     <string name="settings_username">Username</string>
     <string name="settings_user_key">username</string>
