--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,8 @@
     <string name="action_settings">Settings</string>
     <string name="default_preferences_title">Preference Title</string>
     <string name="default_preferences_summary">Preference Description</string>
+    <string name="settings_editText_dialog_header_image_desc">USC Shield Logo</string>
+    <string name="settings_editText_dialog_preference_name_title">Preference Name</string>
     
     <!-- General User Settings Activities w/ Keys -->
     <string name="settings_personal_info">Personal Info</string>
